# d-ipcam

./: .gitignore  Makefile  README.md  d-ipcam.spec  pyproject.toml  requirements.txt
.github/workflows/: build.yml
d_ipcam/: __init__.py  main.py
d_ipcam/core/: __init__.py  config.py  constants.py
d_ipcam/data/: __init__.py  database.py
d_ipcam/data/models/: __init__.py  camera.py  settings.py
d_ipcam/data/repositories/: __init__.py  camera_repo.py
d_ipcam/services/: __init__.py  audio_service.py  camera_service.py  discovery_service.py  stream_service.py  talkback_service.py  update_service.py
d_ipcam/ui/: __init__.py  main_window.py
d_ipcam/ui/widgets/: __init__.py  camera_grid.py  camera_list.py  camera_view.py  dialogs.py
docs/: ARCHITECTURE.md  TECH_SPEC_ALERT_SYSTEM.md
scripts/: build_dmg.sh
