[project]
name = "d-ipcam"
version = "0.1.1"
description = "RTSP IP camera viewer and monitoring system"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "D-IPCam Team"}
]
keywords = ["camera", "ip-camera", "rtsp", "surveillance", "pyqt6"]

dependencies = [
    "PyQt6>=6.6.0",
    "PyQt6-Qt6>=6.6.0",
    "opencv-python>=4.9.0",
    "numpy>=1.21.0",
    "python-nmap>=0.7.1",
    "av>=12.0.0", # PyAV for RTSP audio/video decoding
    "onvif-zeep>=0.2.12",
    "dahua-devices>=0.0.2.post2",
    "pymupdf",
    "packaging>=21.0",  # For version comparison
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-qt>=4.3.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]
ml = [
    "ultralytics>=8.1.0",  # YOLO
    "torch>=2.2.0",
]

[project.scripts]
d-ipcam = "d_ipcam.main:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["d_ipcam*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=d_ipcam"

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
